--- a/ChatApp/main_app/templates/main_app/base.html
+++ b/ChatApp/main_app/templates/main_app/base.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>{% block title %}{% endblock %}Djangochat</title>
+        <title>{% block title %}{% endblock %}DChat</title>
 
         <script src="https://cdn.tailwindcss.com"></script>
 
@@ -20,12 +20,15 @@
     <body class="bg-teal-600">
         <nav class="flex items-center justify-between px-4 py-6 bg-#74cfbf-800">
             <div>
-                <a href="/" class="text-xl text-white">Djangochat</a>
+                <a href="/" class="text-xl text-white">DChat</a>
             </div>
 
             <div class="flex items-center space-x-4">
+
+                <a href="{% url 'home' %}" class="px-5 py-3 rounded-xl text-white bg-green-600 hover:bg-green-700">Home</a>
+                
                 {% if request.user.is_authenticated %}
-                    <a href="/rooms/" class="text-white hover:text-gray-200">Rooms</a>
+                    <a href="/rooms/" class="px-5 py-3 rounded-xl text-white bg-green-600 hover:bg-green-700">Rooms</a>
 
                     <a href="/logout/" class="px-5 py-3 rounded-xl text-white bg-green-600 hover:bg-green-700">Log out</a>
                 {% else %}
