--- a/ChatApp/room/templates/room/room.html
+++ b/ChatApp/room/templates/room/room.html
@@ -3,8 +3,29 @@
 {% block title %} {{ room.name }} | {% endblock %}
 
 {% block content %}
-<div class="p-10 lg:p-20 text-center">
-    <h1 class="text-3xl lg:text-6xl text-white">{{room.name}}</h1>
+<div class="p-5 lg:p-10 text-center">
+    <h1 class="text-3xl lg:text-6xl text-white">Room: {{room.name}}</h1>
+</div>
+
+<div class="lg:w-2/4 mx-4 lg:mx-auto p-4 bg-white rounded-xl">
+    <div class="chat-messages space-y-3" id="chat-messages">
+        <div class="p-4 bg-gray-200 rounded-xl">
+            <p class="font-semibold">Username</p>
+            <p>The message lorem ipsum</p>
+        </div>
+        <div class="p-4 bg-gray-200 rounded-xl">
+            <p class="font-semibold">Username</p>
+            <p>The message lorem ipsum</p>
+        </div>
+        <div class="p-4 bg-gray-200 rounded-xl">
+            <p class="font-semibold">Username</p>
+            <p>The message lorem ipsum</p>
+        </div>
+    </div>
+</div>
+
+<div class="lg:w-2/4 mt-6 mx-4 lg:mx-auto p-4 bg-white rounded-xl">
+    <form ></form>
 </div>
 
 
