modified room template

--- a/ChatApp/main_app/templates/main_app/home.html
+++ b/ChatApp/main_app/templates/main_app/home.html
@@ -10,7 +10,7 @@
     {% if user.is_authenticated %}
     
     <div class="form-group">
-            <input id="room-name-input" type="text" class="form-control mb-3" placeholder="Enter room name..."><br>
+            <input id="room-name-input" type="text" class="text-black form-control mb-3" placeholder="Enter room name..."><br>
             <button id="room-name-submit" class="px-2 py-2 rounded-xl text-white bg-green-600 hover:bg-green-700">Enter</button>
         </div>
     <h1 class="text-3xl lg:text-6xl text-black my-5">OR</h1>
