completed message store & templates

--- a/ChatApp/main_app/templates/main_app/base.html
+++ b/ChatApp/main_app/templates/main_app/base.html
@@ -20,7 +20,7 @@
     <body class="bg-teal-600">
         <nav class="flex items-center justify-between px-4 py-6 bg-#74cfbf-800">
             <div>
-                <a href="/" class="text-xl text-white">DChat</a>
+                <a href="{% url 'home' %}" class="text-3xl text-white font-bold">DChat</a>
             </div>
 
             <div class="flex items-center space-x-4">
