--- a/ChatApp/main_app/templates/main_app/home.html
+++ b/ChatApp/main_app/templates/main_app/home.html
@@ -18,8 +18,8 @@
 
     <div class="btn-group" role="group" aria-label="Basic example">
         <a href="{% url 'room_app:rooms' %}" type="button" class="px-3 py-3 rounded-xl text-white bg-green-600 hover:bg-green-700">Rooms</a>
-        <a type="button" class="px-3 py-3 my-5 mx-5 rounded-xl text-white bg-green-600 hover:bg-green-700">Open your own room</a>
-    </div>
+        <a href="{% url 'room_app:open_new_room' %}" class="px-3 py-3 my-5 mx-5 rounded-xl text-white bg-green-600 hover:bg-green-700">Open your own room</a>
+
     </div>
     {% else %}
         <div class="card bg-dark text-white shadow-lg my-5">
