--- a/ChatApp/room/templates/room/rooms.html
+++ b/ChatApp/room/templates/room/rooms.html
@@ -14,6 +14,12 @@
                 <h2 class="mb-5 text-2xl font-semibold">Room: {{ room.name }}</h2>
 
                 <a href="{% url 'room_app:room' room.name %}" class="px-5 py-3 block rounded-xl text-white bg-teal-600 hover:bg-teal-700">Join</a>
+                
+                <!-- Add the delete button with a confirmation prompt -->
+                <form method="post" action="{% url 'room_app:delete_room' room.id %}" class="mt-3">
+                    {% csrf_token %}
+                    <button type="submit" class="px-5 py-3 block rounded-xl text-white bg-red-600 hover:bg-red-700" onclick="return confirm('Are you sure you want to delete this room?')">Delete</button>
+                </form>
             </div>
         </div>
     {% endfor %}
