--- a/ChatApp/main_app/templates/main_app/base.html
+++ b/ChatApp/main_app/templates/main_app/base.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <title>{% block title %}{% endblock %}DChat</title>
-
         <script src="https://cdn.tailwindcss.com"></script>
-
         <style>
             .messages {
                 height: 400px;
@@ -16,32 +12,31 @@
             }
         </style>
     </head>
-
     <body class="bg-teal-600">
         <nav class="flex items-center justify-between px-4 py-6 bg-#74cfbf-800">
             <div>
                 <a href="{% url 'home' %}" class="text-3xl text-white font-bold">DChat</a>
             </div>
-
             <div class="flex items-center space-x-4">
-
                 <a href="{% url 'home' %}" class="px-5 py-3 rounded-xl text-white bg-green-600 hover:bg-green-700">Home</a>
-                
                 {% if request.user.is_authenticated %}
                     <a href="/rooms/" class="px-5 py-3 rounded-xl text-white bg-green-600 hover:bg-green-700">Rooms</a>
-
                     <a href="/logout/" class="px-5 py-3 rounded-xl text-white bg-green-600 hover:bg-green-700">Log out</a>
                 {% else %}
                     <a href="/login/" class="px-5 py-3 rounded-xl text-white bg-green-600 hover:bg-green-700">Login</a>
-            
                     <a href="/signup/" class="px-5 py-3 rounded-xl text-white bg-green-600 hover:bg-green-700">Sign up</a>
                 {% endif %}
             </div>
         </nav>
-
         {% block content %}
         {% endblock %}
-
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
         {% block scripts %}
         {% endblock %}
     </body>
